[project]
name = "Med-Assist"
version = "0.1.0"
description = "Agentic AI patient Q&A assistant using LangGraph multi-agent orchestration and fastMCP structured tools"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "ddgs>=9.14.4",
    "fastapi>=0.139.0",
    "fastembed>=0.8.0",
    "fastmcp>=3.4.4",
    "langchain>=1.3.13",
    "langchain-chroma>=1.1.0",
    "langchain-cli[inmem]>=0.0.37",
    "langchain-community>=0.4.2",
    "langchain-core>=1.4.9",
    "langchain-groq>=1.1.3",
    "langchain-ollama>=1.1.0",
    "langgraph-checkpoint-sqlite>=3.1.0",
    "langgraph[sqlite]>=1.2.9",
    "pydantic>=2.13.4",
    "pypdf>=6.14.2",
    "python-dotenv>=1.2.2",
    "streamlit>=1.59.2",
    "uvicorn>=0.51.0",
    "watchdog>=6.0.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
# Modules under test live in the repo root (no package layout).
pythonpath = ["."]

[tool.ruff]
line-length = 100

[tool.ruff.lint]
# Defaults (E4/E7/E9/F) plus import sorting.
extend-select = ["I"]

[dependency-groups]
dev = [
    "pytest>=9.1.1",
    "ruff>=0.15.21",
]
